--- a/P.html
+++ b/P.html
@@ -11,7 +11,7 @@
 
         <nav class="nav-mobile">
             <div class="navbar-brand">
-                <img src="M.jpg" alt="logo" class="brand-img">
+                <img src="Mritunjay.jpg" alt="logo" class="brand-img">
                 <h1 class="brand-name">Mritunjay Mishra</h1>
             </div>
 
@@ -19,7 +19,7 @@
         </nav>
 
         <div class="side-bar">
-            <img src="M.jpg" alt="logo" class="brand-img">
+            <img src="Mritunjay.jpg" alt="logo" class="brand-img">
             <h1 class="brand-name">Mritunjay <br> Mishra</h1>
 
             <nav>
@@ -47,7 +47,7 @@
         <section class="about page active">
             <div class="hero">
                 <div class="hero-img-box">
-                    <img src="M.jpg" alt="hero img">
+                    <img src="Mritunjay.jpg" alt="hero img">
                 </div>
     
                 <div class="hero-content">
