--- a/P.html
+++ b/P.html
@@ -47,7 +47,7 @@
         <section class="about page active">
             <div class="hero">
                 <div class="hero-img-box">
-                    <img src="Mritunjay.jpg" alt="hero img">
+                    <img src="M.jpg" alt="hero img">
                 </div>
     
                 <div class="hero-content">
@@ -89,7 +89,7 @@
                             <h4 class="year">2017-2019</h4>
                             <h4 class="education-name">10 th</h4>
                             <p class="company">Indian Public School</p>
-                            <p class="education-description"> I have completing my 10th in  Indian Public School, Hata, Kushinagar in 2019. I have earn  percentage of 73.83. </p>
+                            <p class="education-description"> I have completing my 10th in  Indian Public School, Hata, Kushinagar in 2019 and earn  percentage of 73.83. </p>
 
                             <div class="divider"></div>
                         </div>
@@ -98,7 +98,7 @@
                             <h4 class="year">2019-2021</h4>
                             <h4 class="education-name">12 th</h4>
                             <p class="company">Indian Public School</p>
-                            <p class="education-description"> I have completing my 12th in  Indian Public School, Hata, Kushinagar in 2021. I have earn  percentage of 78. </p>
+                            <p class="education-description"> I have completing my 12th in  Indian Public School, Hata, Kushinagar in 2021 and earn  percentage of 78. </p>
 
                             <div class="divider"></div>
                         </div>
