--- a/P.html
+++ b/P.html
@@ -27,7 +27,7 @@
                     <li><a href="#" class="active">About</a></li>
                     <li><a href="#">Resume</a></li>
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Certificate</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -181,8 +181,8 @@
             
         </section>
 
-        <section class="blog page">
-            <h1 class="section-heading">Blog</h1>
+        <section class="certificate page">
+            <h1 class="section-heading">Certificate</h1>
            
         </section>
 
