--- a/P.html
+++ b/P.html
@@ -229,7 +229,72 @@
 
         <section class="portfolio page ">
             <h1 class="section-heading">Portfolio</h1>
-            
+            <h4 class="section-sub-heading">My Works</h4>
+
+            <ul class="filter-box">
+                <li class="filter-item active">All</li>
+                <li class="filter-item">Media</li>
+                <!-- <li class="filter-item">Mockups</li>
+                <li class="filter-item">SoundCloud</li>
+                <li class="filter-item">Vimeo Videos</li>
+                <li class="filter-item">Youtube Videos</li> -->
+            </ul>
+
+            <div class="portfolio-items-group">
+                <!-- <div class="portfolio-item active">
+                    <img src="https://i.postimg.cc/N0mGDRsP/1.jpg" alt="image" class="item-img">
+                    <h4 class="item-name">SoundCloud Audio</h4>
+                    <div class="item-icon">
+                        <ion-icon name="volume-high"></ion-icon>
+                    </div>
+                    <div class="item-category">SoundCloud</div>
+                </div> -->
+
+                <div class="portfolio-item active">
+                    <img src="https://i.postimg.cc/Qxd1NpZ7/2.jpg" alt="image" class="item-img">
+                    <h4 class="item-name">Media Project 1</h4>
+                    <div class="item-icon">
+                        <ion-icon name="film"></ion-icon>
+                    </div>
+                    <div class="item-category">Media</div>
+                </div>
+                
+                <!-- <div class="portfolio-item active">
+                    <img src="https://i.postimg.cc/CLrDRzwQ/3.jpg" alt="image" class="item-img">
+                    <h4 class="item-name">Vimeo Video 1</h4>
+                    <div class="item-icon">
+                        <ion-icon name="videocam"></ion-icon>
+                    </div>
+                    <div class="item-category">Vimeo Videos</div>
+                </div> -->
+
+                <div class="portfolio-item active">
+                    <img src="https://i.postimg.cc/nLBQS2By/4.jpg" alt="image" class="item-img">
+                    <h4 class="item-name">Media Project 2</h4>
+                    <div class="item-icon">
+                        <ion-icon name="film"></ion-icon>
+                    </div>
+                    <div class="item-category">Media</div>
+                </div>
+
+                <!-- <div class="portfolio-item active">
+                    <img src="https://i.postimg.cc/1tKVszWM/5.jpg" alt="image" class="item-img">
+                    <h4 class="item-name">Mockup Design 1</h4>
+                    <div class="item-icon">
+                        <ion-icon name="image"></ion-icon>
+                    </div>
+                    <div class="item-category">Mockups</div>
+                </div>
+
+                <div class="portfolio-item active">
+                    <img src="https://i.postimg.cc/x8TJCShQ/6.jpg" alt="image" class="item-img">
+                    <h4 class="item-name">Youtube Video 1</h4>
+                    <div class="item-icon">
+                        <ion-icon name="videocam"></ion-icon>
+                    </div>
+                    <div class="item-category">Youtube Videos</div>
+                </div> -->
+            </div>
         </section>
 
         <section class="certificate page">
