--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@ I am looking for opportunities where I can use my skills, work on real projects,
         <h2 class="text-3xl font-bold mb-4 text-center">Projects</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
             <div class="project-card" onclick="showDownload(1)">
-                <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/a1edeb3b-6173-4be5-a3ec-a8fd32429313.png" alt="Screenshot of a modern e-commerce website with product listings, shopping cart, and user-friendly navigation interface" class="w-full rounded">
+                <img src="X.png" alt="Screenshot of a modern e-commerce website with product listings, shopping cart, and user-friendly navigation interface" class="w-full rounded">
                 <h3 class="mt-2 font-bold">E-Commerce Site</h3>
             </div>
             <div class="project-card" onclick="showDownload(2)">
-                <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/0b362daa-123d-4f2f-847f-1137f11c4d6a.png" alt="Mobile app interface showing task list with colorful icons, checkboxes for completion, and priority indicators" class="w-full rounded">
+                <img src="Y.png" alt="Mobile app interface showing task list with colorful icons, checkboxes for completion, and priority indicators" class="w-full rounded">
                 <h3 class="mt-2 font-bold">Task Manager App</h3>
             </div>
             <div class="project-card" onclick="showDownload(3)">
-                <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/96b75e19-51cd-43af-b1dd-5c01e068e4ba.png" alt="Dashboard with graphs and charts for analytics data visualization, displaying metrics like user activity and sales trends" class="w-full rounded">
+                <img src="Z.png" alt="Dashboard with graphs and charts for analytics data visualization, displaying metrics like user activity and sales trends" class="w-full rounded">
                 <h3 class="mt-2 font-bold">Data Dashboard</h3>
             </div>
         </div>
